Solved subscription problem